--- a/public/css/app.css
+++ b/public/css/app.css
@@ -859,8 +859,18 @@ video {
   z-index: 50;
 }.z-40 {
   z-index: 40;
+}.order-1 {
+  order: 1;
+}.order-last {
+  order: 9999;
+}.order-none {
+  order: 0;
 }.col-span-6 {
   grid-column: span 6 / span 6;
+}.col-span-3 {
+  grid-column: span 3 / span 3;
+}.col-span-9 {
+  grid-column: span 9 / span 9;
 }.mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -920,14 +930,26 @@ video {
   margin-top: -1px;
 }.mt-16 {
   margin-top: 4rem;
+}.mt-0 {
+  margin-top: 0px;
 }.mt-9 {
   margin-top: 2.25rem;
 }.mt-20 {
   margin-top: 5rem;
-}.mt-0 {
-  margin-top: 0px;
+}.ml-10 {
+  margin-left: 2.5rem;
 }.-ml-2 {
   margin-left: -0.5rem;
+}.mt-32 {
+  margin-top: 8rem;
+}.mb-12 {
+  margin-bottom: 3rem;
+}.mb-10 {
+  margin-bottom: 2.5rem;
+}.ml-0 {
+  margin-left: 0px;
+}.mr-1 {
+  margin-right: 0.25rem;
 }.block {
   display: block;
 }.inline {
@@ -964,6 +986,12 @@ video {
   height: 100%;
 }.h-52 {
   height: 13rem;
+}.h-40 {
+  height: 10rem;
+}.h-48 {
+  height: 12rem;
+}.h-24 {
+  height: 6rem;
 }.min-h-screen {
   min-height: 100vh;
 }.w-5 {
@@ -996,6 +1024,8 @@ video {
   width: 50%;
 }.w-20 {
   width: 5rem;
+}.w-24 {
+  width: 6rem;
 }.min-w-0 {
   min-width: 0px;
 }.max-w-screen-xl {
@@ -1053,16 +1083,23 @@ video {
 }.columns-1 {
   -moz-columns: 1;
        columns: 1;
+}.break-after-column {
+  -moz-column-break-after: column;
+       break-after: column;
 }.grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }.grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }.flex-row {
   flex-direction: row;
 }.flex-col {
   flex-direction: column;
 }.flex-wrap {
   flex-wrap: wrap;
+}.items-start {
+  align-items: flex-start;
 }.items-center {
   align-items: center;
 }.justify-end {
@@ -1278,6 +1315,18 @@ video {
 }.px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
+}.px-0 {
+  padding-left: 0px;
+  padding-right: 0px;
+}.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}.py-1\.5 {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 }.pt-6 {
   padding-top: 1.5rem;
 }.pt-5 {
@@ -1304,6 +1353,12 @@ video {
   padding-top: 2.5rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
+}.pb-20 {
+  padding-bottom: 5rem;
+}.pb-32 {
+  padding-bottom: 8rem;
+}.pl-0 {
+  padding-left: 0px;
 }.text-left {
   text-align: left;
 }.text-center {
@@ -1410,9 +1465,6 @@ video {
 }.text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}.text-zinc-600 {
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
 }.text-green-900 {
   --tw-text-opacity: 1;
   color: rgb(20 83 45 / var(--tw-text-opacity));
@@ -1555,6 +1607,9 @@ video {
 }.hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}.hover\:bg-indigo-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }.hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1632,6 +1687,10 @@ video {
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}.focus\:ring-1:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }.focus\:ring-inset:focus {
   --tw-ring-inset: inset;
 }.focus\:ring-gray-300:focus {
@@ -1649,8 +1708,15 @@ video {
 }.focus\:ring-gray-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(156 163 175 / var(--tw-ring-opacity));
+}.focus\:ring-indigo-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
 }.focus\:ring-opacity-50:focus {
   --tw-ring-opacity: 0.5;
+}.focus\:ring-offset-2:focus {
+  --tw-ring-offset-width: 2px;
+}.focus\:ring-offset-1:focus {
+  --tw-ring-offset-width: 1px;
 }.active\:bg-gray-100:active {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1677,40 +1743,37 @@ video {
 }.dark .dark\:border-gray-700 {
   --tw-border-opacity: 1;
   border-color: rgb(55 65 81 / var(--tw-border-opacity));
-}.dark .dark\:border-zinc-700\/40 {
-  border-color: rgb(63 63 70 / 0.4);
-}.dark .dark\:border-zinc-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 216 / var(--tw-border-opacity));
 }.dark .dark\:border-zinc-300\/20 {
   border-color: rgb(212 212 216 / 0.2);
-}.dark .dark\:border-gray-200 {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}.dark .dark\:border-zinc-700\/40 {
+  border-color: rgb(63 63 70 / 0.4);
 }.dark .dark\:border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}.dark .dark\:bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }.dark .dark\:bg-gray-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }.dark .dark\:bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}.dark .dark\:bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}.dark .dark\:bg-zinc-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
 }.dark .dark\:bg-zinc-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}.dark .dark\:bg-green-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(74 222 128 / var(--tw-bg-opacity));
 }.dark .dark\:bg-green-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(20 83 45 / var(--tw-bg-opacity));
+}.dark .dark\:bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}.dark .dark\:bg-zinc-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 39 42 / var(--tw-bg-opacity));
+}.dark .dark\:bg-teal-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(13 148 136 / var(--tw-bg-opacity));
 }.dark .dark\:text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
@@ -1726,63 +1789,40 @@ video {
 }.dark .dark\:text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
-}.dark .dark\:text-zinc-700 {
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
 }.dark .dark\:text-zinc-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 91 / var(--tw-text-opacity));
-}.dark .dark\:text-zinc-400 {
+}.dark .dark\:text-teal-100 {
   --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
-}.dark .dark\:text-green-400 {
+  color: rgb(204 251 241 / var(--tw-text-opacity));
+}.dark .dark\:text-teal-400 {
   --tw-text-opacity: 1;
-  color: rgb(74 222 128 / var(--tw-text-opacity));
-}.dark .dark\:ring-zinc-300 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(212 212 216 / var(--tw-ring-opacity));
-}.dark .dark\:ring-gray-100 {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(243 244 246 / var(--tw-ring-opacity));
+  color: rgb(45 212 191 / var(--tw-text-opacity));
 }.dark .dark\:ring-zinc-300\/20 {
   --tw-ring-color: rgb(212 212 216 / 0.2);
-}.dark .dark\:hover\:bg-gray-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-gray-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-gray-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-gray-800:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }.dark .dark\:hover\:bg-zinc-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-zinc-400:hover {
+}.dark .dark\:hover\:bg-teal-700:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(161 161 170 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-zinc-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:bg-zinc-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
-}.dark .dark\:hover\:text-gray-300:hover {
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}.dark .dark\:hover\:text-gray-100:hover {
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
+  background-color: rgb(15 118 110 / var(--tw-bg-opacity));
 }.dark .dark\:hover\:text-gray-200:hover {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
+}.dark .dark\:hover\:text-gray-100:hover {
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
 }.dark .dark\:focus\:ring-gray-200:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(229 231 235 / var(--tw-ring-opacity));
-}@media (min-width: 640px) {.sm\:col-span-4 {
+}.dark .dark\:focus\:ring-teal-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(20 184 166 / var(--tw-ring-opacity));
+}@media (min-width: 640px) {.sm\:order-last {
+    order: 9999;
+  }.sm\:order-none {
+    order: 0;
+  }.sm\:col-span-4 {
     grid-column: span 4 / span 4;
   }.sm\:col-span-2 {
     grid-column: span 2 / span 2;
@@ -1811,6 +1851,12 @@ video {
     margin-left: 0px;
   }.sm\:mt-32 {
     margin-top: 8rem;
+  }.sm\:mt-6 {
+    margin-top: 1.5rem;
+  }.sm\:mt-10 {
+    margin-top: 2.5rem;
+  }.sm\:mt-20 {
+    margin-top: 5rem;
   }.sm\:block {
     display: block;
   }.sm\:flex {
@@ -1825,6 +1871,8 @@ video {
     width: 2.5rem;
   }.sm\:w-full {
     width: 100%;
+  }.sm\:w-20 {
+    width: 5rem;
   }.sm\:max-w-md {
     max-width: 28rem;
   }.sm\:max-w-sm {
@@ -1856,8 +1904,19 @@ video {
   }.sm\:columns-4 {
     -moz-columns: 4;
          columns: 4;
+  }.sm\:columns-2 {
+    -moz-columns: 2;
+         columns: 2;
   }.sm\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }.sm\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }.sm\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }.sm\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }.sm\:grid-cols-12 {
+    grid-template-columns: repeat(12, minmax(0, 1fr));
   }.sm\:items-start {
     align-items: flex-start;
   }.sm\:items-center {
@@ -1902,8 +1961,14 @@ video {
     padding-left: 1.25rem;
   }.sm\:pr-6 {
     padding-right: 1.5rem;
+  }.sm\:pl-10 {
+    padding-left: 2.5rem;
+  }.sm\:pr-5 {
+    padding-right: 1.25rem;
   }.sm\:text-left {
     text-align: left;
+  }.sm\:text-center {
+    text-align: center;
   }.sm\:text-right {
     text-align: right;
   }.sm\:text-5xl {
@@ -1930,6 +1995,8 @@ video {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }.md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }.md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }.md\:gap-6 {
     gap: 1.5rem;
   }.md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
@@ -1940,13 +2007,35 @@ video {
     border-top-width: 0px;
   }.md\:border-l {
     border-left-width: 1px;
+  }.md\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }.md\:pl-5 {
+    padding-left: 1.25rem;
+  }.md\:text-left {
+    text-align: left;
+  }.md\:text-center {
+    text-align: center;
   }
 }@media (min-width: 1024px) {.lg\:order-first {
     order: -9999;
+  }.lg\:order-none {
+    order: 0;
   }.lg\:col-span-4 {
     grid-column: span 4 / span 4;
   }.lg\:row-span-2 {
     grid-row: span 2 / span 2;
+  }.lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }.lg\:mt-20 {
+    margin-top: 5rem;
+  }.lg\:mt-0 {
+    margin-top: 0px;
+  }.lg\:h-20 {
+    height: 5rem;
+  }.lg\:w-20 {
+    width: 5rem;
   }.lg\:max-w-none {
     max-width: none;
   }.lg\:max-w-5xl {
@@ -1965,6 +2054,12 @@ video {
     padding-right: 3rem;
   }.lg\:pl-20 {
     padding-left: 5rem;
+  }.lg\:pl-5 {
+    padding-left: 1.25rem;
+  }.lg\:pr-5 {
+    padding-right: 1.25rem;
+  }.lg\:text-left {
+    text-align: left;
   }
 }
 
